--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             </div>
             <div class="links">
                 <div class="main-links">
-                    <p><a href="/">Home</a></p>
+                    <p><a href="/BMI/">Home</a></p>
                     <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
