--- a/contact.html
+++ b/contact.html
@@ -37,17 +37,16 @@
             <div class="links">
                 <div class="main-links">
                     <p><a href="/">Home</a></p>
-                    <p><a href="/about.html">About</a></p>
+                    <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="#service1">Service 1</a></li>
-                            <li><a href="#service2">Service 2</a></li>
-                            <li><a href="#service3">Service 3</a></li>
+                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
-                    <p><a href="/blog-listing.html">Blog</a></p>
-                    <p><a href="/contact.html">Contact</a></p>
+                    <p><a href="/BMI/blog-listing.html">Blog</a></p>
+                    <p><a href="/BMI/contact.html">Contact</a></p>
                 </div>
                 <div class="main-usersec">
                     <div class="search_head">
