--- a/listing-page.html
+++ b/listing-page.html
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!-- Latest categories -->
-    <section class="section_bg categories_sec">
+     <section class="section_bg categories_sec">
         <div class="container">
             <div class="main_subtitle">
                 <h2 class="subheading">Our Products</h2>
@@ -95,7 +95,7 @@
             <div class="collection_main row">
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-1.png" alt="">
                             <div class="product_detai">
@@ -115,7 +115,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-2.png" alt="">
                             <div class="product_detai">
@@ -134,7 +134,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-3.png" alt="">
                             <div class="product_detai">
@@ -153,7 +153,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-4.png" alt="">
                             <div class="product_detai">
@@ -172,7 +172,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-5.png" alt="">
                             <div class="product_detai">
@@ -192,7 +192,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-6.png" alt="">
                             <div class="product_detai">
@@ -211,7 +211,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-7.png" alt="">
                             <div class="product_detai">
@@ -230,7 +230,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-8.png" alt="">
                             <div class="product_detai">
@@ -249,7 +249,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-1.png" alt="">
                             <div class="product_detai">
@@ -269,7 +269,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-2.png" alt="">
                             <div class="product_detai">
@@ -288,7 +288,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-3.png" alt="">
                             <div class="product_detai">
@@ -307,7 +307,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-4.png" alt="">
                             <div class="product_detai">
@@ -326,7 +326,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/detail-page.html">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-5.png" alt="">
                             <div class="product_detai">
@@ -346,7 +346,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-6.png" alt="">
                             <div class="product_detai">
@@ -365,7 +365,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-7.png" alt="">
                             <div class="product_detai">
@@ -384,7 +384,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="">
+                    <a href="/BMI/detail-page.html">
                         <div class="collect_imag">
                             <img src="./image/bestseller-8.png" alt="">
                             <div class="product_detai">
