--- a/blog-listing.html
+++ b/blog-listing.html
@@ -84,10 +84,10 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et.
                             </p>
-                            <p class="mt-3 common-btn"><a href="/detail-page.html">Read More</a></p>
+                            <p class="mt-3 common-btn"><a href="/BMI/detail-page.html">Read More</a></p>
                         </div>
                         <div class="col-lg-6">
-                            <a href="/detail-page.html">
+                            <a href="/BMI/blog-detail.html">
                                 <img src="./image/blog_listmain.png" alt="">
                             </a>
                         </div>
@@ -105,11 +105,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain1.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
@@ -120,11 +120,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain2.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
@@ -135,11 +135,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain3.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain3.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
@@ -150,11 +150,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain4.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain4.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
@@ -165,11 +165,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain1.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
@@ -180,11 +180,11 @@
                 <!--  -->
                 <div class="row">
                     <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain2.png" alt=""></a>
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
                     </div>
                     <div class="col-lg-6 right">
                         <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
+                        <a href="/BMI/blog-detail.html">
                             <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
