--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
