--- a/detail-page.html
+++ b/detail-page.html
@@ -35,13 +35,13 @@
                 </a>
             </div>
             <div class="links">
-               <div class="main-links">
-                    <p><a href="/">Home</a></p>
+                <div class="main-links">
+                    <p><a href="/BMI/">Home</a></p>
                     <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
