--- a/listing-page.html
+++ b/listing-page.html
@@ -35,13 +35,13 @@
                 </a>
             </div>
             <div class="links">
-               <div class="main-links">
-                    <p><a href="/">Home</a></p>
+                <div class="main-links">
+                    <p><a href="/BMI/">Home</a></p>
                     <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!-- Latest categories -->
-     <section class="section_bg categories_sec">
+    <section class="section_bg categories_sec">
         <div class="container">
             <div class="main_subtitle">
                 <h2 class="subheading">Our Products</h2>
@@ -346,7 +346,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/BMI/detail-page.html">
+                    <a href="">
                         <div class="collect_imag">
                             <img src="./image/bestseller-6.png" alt="">
                             <div class="product_detai">
@@ -365,7 +365,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/BMI/detail-page.html">
+                    <a href="">
                         <div class="collect_imag">
                             <img src="./image/bestseller-7.png" alt="">
                             <div class="product_detai">
@@ -384,7 +384,7 @@
                 </div>
                 <!--  -->
                 <div class="collect_item">
-                    <a href="/BMI/detail-page.html">
+                    <a href="">
                         <div class="collect_imag">
                             <img src="./image/bestseller-8.png" alt="">
                             <div class="product_detai">
