--- a/blog-detail.html
+++ b/blog-detail.html
@@ -37,16 +37,17 @@
             <div class="links">
                 <div class="main-links">
                     <p><a href="/">Home</a></p>
-                    <p><a href="/BMI/about.html">About</a></p>
+                    <p><a href="/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
-                            <li><a href="/BMI/detail-page.html">Detail Page</a></li>
+                            <li><a href="#service1">Service 1</a></li>
+                            <li><a href="#service2">Service 2</a></li>
+                            <li><a href="#service3">Service 3</a></li>
                         </ul>
                     </div>
-                    <p><a href="/BMI/blog-listing.html">Blog</a></p>
-                    <p><a href="/BMI/contact.html">Contact</a></p>
+                    <p><a href="/blog-listing.html">Blog</a></p>
+                    <p><a href="/contact.html">Contact</a></p>
                 </div>
                 <div class="main-usersec">
                     <div class="search_head">
@@ -70,179 +71,153 @@
         </nav>
         <!-- NAV_BAR_SECTION END -->
     </header>
-  <!-- Main Section start -->
-    <section class="bloglist_sec">
+    <!-- Main Section start -->
+    <section class="blog_detaisec">
         <div class="container">
-            <div class="bloglist_slider owl-carousel owl-theme">
-                <!--  -->
-                <div class="item">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h5>Featured Blog</h5>
-                            <h2>Lorem ipsum dolor sit amet, consectetur dolor amet adipiscing elit. </h2>
-                            <h6>By Admin | May 26, 2025</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et.
-                            </p>
-                            <p class="mt-3 common-btn"><a href="/BMI/detail-page.html">Read More</a></p>
-                        </div>
-                        <div class="col-lg-6">
-                            <a href="/BMI/detail-page.html">
-                                <img src="./image/blog_listmain.png" alt="">
-                            </a>
+            <!--  -->
+            <div class="blog_admin">
+                <div class="row first_admin">
+                    <div class="col-lg-6">
+                        <div class="d-flex align-items-center">
+                            <img src="./image/admin.png" alt="">
+                            <div class="admin-detail">
+                                <h6>By Admin</h6>
+                                <p>Posted on 27th January 2022</p>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 d-lg-block d-none">
+                        <div class="first_share d-flex justify-content-end align-items-center">
+                            <p>Share</p>
+                            <span>_______</span>
+                            <div class="social_blog">
+                                <a href=""><i class="fa-solid fa-link"></i></a>
+                                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!--  -->
+            </div>
+            <!--  -->
+            <div class="blog_detailcont">
+                <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    In egestas lorem neque, congue ac.</h1>
+                <img class="blog_mainimg" src="./image/blog-detail.png" alt="">
+                <div class="blog_content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Non blandit massa enim nec. Scelerisque viverra mauris in aliquam sem.
+                        At
+                        risus viverra adipiscing at in tellus. Sociis natoque penatibus et magnis dis parturient montes.
+                        Ridiculus mus mauris vitae ultricies leo. Neque egestas congue quisque egestas diam. Risus in
+                        hendrerit gravida rutrum quisque non.</p>
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Non blandit massa enim nec. Scelerisque viverra mauris in aliquam sem.
+                        At
+                        risus viverra adipiscing at in tellus. Sociis natoque penatibus et magnis dis parturient montes.
+                        Ridiculus mus mauris vitae ultricies leo. Neque egestas congue quisque egestas diam. Risus in
+                        hendrerit gravida rutrum quisque non.</p>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Non blandit massa enim nec. Scelerisque viverra mauris in aliquam sem.
+                        At
+                        risus viverra adipiscing at in tellus. Sociis natoque penatibus et magnis dis parturient montes.
+                        Ridiculus mus mauris vitae ultricies leo. Neque egestas congue quisque egestas diam. Risus in
+                        hendrerit gravida rutrum quisque non.</p>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Non blandit massa enim nec. Scelerisque viverra mauris in aliquam sem.
+                        At
+                        risus viverra adipiscing at in tellus. Sociis natoque penatibus et magnis dis parturient montes.
+                        Ridiculus mus mauris vitae ultricies leo. Neque egestas congue quisque egestas diam. Risus in
+                        hendrerit gravida rutrum quisque non.</p>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Non blandit massa enim nec. Scelerisque viverra mauris in aliquam sem.
+                        At
+                        risus viverra adipiscing at in tellus. Sociis natoque penatibus et magnis dis parturient montes.
+                        Ridiculus mus mauris vitae ultricies leo. Neque egestas congue quisque egestas diam. Risus in
+                        hendrerit gravida rutrum quisque non.</p>
+                </div>
+            </div>
+            <div class="first_admin">
+                <div class="col-lg-6 d-lg-none">
+                    <div class="first_share d-flex justify-content-end align-items-center">
+                        <p>Share</p>
+                        <span>_______</span>
+                        <div class="social_blog">
+                            <a href=""><i class="fa-solid fa-link"></i></a>
+                            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- Blog Content -->
-    <section class="listing_blogs">
+    <!-- What Next -->
+    <section class="what_next">
         <div class="container">
-            <h1>All Blogs</h1>
-            <div class="listing_allblog">
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/detail-page.html"><img src="./image/blog_listmain1.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/detail-page.html"><img src="./image/blog_listmain2.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/detail-page.html"><img src="./image/blog_listmain3.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/detail-page.html"><img src="./image/blog_listmain4.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/detail-page.html"><img src="./image/blog_listmain1.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/detail-page.html"><img src="./image/blog_listmain2.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/detail-page.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-            </div>
-            <div id="pagination" class="pagination"></div>
-        </div>
-    </section>
-    <!-- Blog Category -->
-    <section class="blog_category">
-        <div class="container">
-            <h2>All Categories</h2>
-            <div class="row ">
+            <h2>What to read next</h2>
+            <div class="what_otherblog">
                 <!--  -->
                 <div class="item">
-                    <img src="./image/star.png" alt="">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <img src="./image/blog_listmain.png" alt="">
+                    <div class="blog_inner">
+                        <h6>By Admin l Aug 23, 2021 </h6>
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing . Praesent et odio in est dictum semper ut
+                            vitae leo. Vivamus venenatis efficitur purus, non ipsum gravida .</p>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/star.png" alt="">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <img src="./image/blog_listmain.png" alt="">
+                    <div class="blog_inner">
+                        <h6>By Admin l Aug 23, 2021 </h6>
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing . Praesent et odio in est dictum semper ut
+                            vitae leo. Vivamus venenatis efficitur purus, non ipsum gravida .</p>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/star.png" alt="">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <img src="./image/blog_listmain.png" alt="">
+                    <div class="blog_inner">
+                        <h6>By Admin l Aug 23, 2021 </h6>
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing . Praesent et odio in est dictum semper ut
+                            vitae leo. Vivamus venenatis efficitur purus, non ipsum gravida .</p>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/star.png" alt="">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <img src="./image/blog_listmain.png" alt="">
+                    <div class="blog_inner">
+                        <h6>By Admin l Aug 23, 2021 </h6>
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing . Praesent et odio in est dictum semper ut
+                            vitae leo. Vivamus venenatis efficitur purus, non ipsum gravida .</p>
+                    </div>
                 </div>
                 <!--  -->
-            </div>
-        </div>
-    </section>
-    <!-- Get a quote -->
-    <section class="free-quote about_freeqout">
-        <img src="./image/blog_list.png" alt="">
-        <div class="free_quotemain">
-            <div class="container">
-                <h2>Get a Free Quote Today!</h2>
-                <p>Discover the best prices for your home essentials fast, easy, and hassle free.</p>
-                <p class="mt-3 common-btn"><a href="">Request a Quote</a></p>
             </div>
         </div>
     </section>
     <!-- Get In Touch -->
-    <section class="get-intouch">
+    <section class="get-intouch blgo_getin">
         <div class="container">
             <h2 class="subheading">Want to Explore Our Collections? Get in Touch</h2>
             <div class="get-touch">
