--- a/blog-listing.html
+++ b/blog-listing.html
@@ -36,12 +36,12 @@
             </div>
             <div class="links">
                <div class="main-links">
-                    <p><a href="/">Home</a></p>
+                    <p><a href="/BMI/">Home</a></p>
                     <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
@@ -84,7 +84,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
                                 semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et.
                             </p>
-                            <p class="mt-3 common-btn"><a href="/BMI/detail-page.html">Read More</a></p>
+                            <p class="mt-3 common-btn"><a href="/BMI/blog-detail.html">Read More</a></p>
                         </div>
                         <div class="col-lg-6">
                             <a href="/BMI/blog-detail.html">
