--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
             </div>
             <div class="links">
                 <div class="main-links">
-                    <p><a href="/">Home</a></p>
+                    <p><a href="/BMI/">Home</a></p>
                     <p><a href="/BMI/about.html">About</a></p>
                     <div class="dropdown-parent">
                         <a href="#about"><span>Catalogues</span></a>
                         <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
@@ -87,9 +87,16 @@
                 <h2>Get In Touch</h2>
                 <form action="">
                     <!--  -->
-                    <div class="form-group">
-                        <label for="Name*">Name</label>
-                        <input type="text" class="form-control" placeholder="Enter Your First Name">
+                    <div class="form_flex">
+                        <div class="form-group">
+                            <label for="Name*">Name</label>
+                            <input type="text" class="form-control" placeholder="Enter Your First Name">
+                        </div>
+                        <!--  -->
+                        <div class="form-group">
+                            <label for="Name">Last Name</label>
+                            <input type="text" class="form-control" placeholder="Enter Your Last Name">
+                        </div>
                     </div>
                     <!--  -->
                     <div class="form_flex">
