--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 			</div>
 			<div class="links">
 				<div class="main-links">
-			                    <p><a href="/">Home</a></p>
-			                    <p><a href="/BMI/about.html">About</a></p>
-			                    <div class="dropdown-parent">
-			                        <a href="#about"><span>Catalogues</span></a>
-			                        <ul class="dropdown">
-			                            <li><a href="/BMI/listing-page.html">Listing Page</a></li>
-			                            <li><a href="/BMI/detail-page.html">Detail Page</a></li>
-			                        </ul>
-			                    </div>
-			                    <p><a href="/BMI/blog-listing.html">Blog</a></p>
-			                    <p><a href="/BMI/contact.html">Contact</a></p>
-			                </div>
+                    <p><a href="/BMI/">Home</a></p>
+                    <p><a href="/BMI/about.html">About</a></p>
+                    <div class="dropdown-parent">
+                        <a href="#about"><span>Catalogues</span></a>
+                        <ul class="dropdown">
+                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
+                            <li><a href="/BMI/detail-page.html">Detail Page</a></li>
+                        </ul>
+                    </div>
+                    <p><a href="/BMI/blog-listing.html">Blog</a></p>
+                    <p><a href="/BMI/contact.html">Contact</a></p>
+                </div>
 				<div class="main-usersec">
 					<div class="search_head">
 						<form action="">
