--- a/index.html
+++ b/index.html
@@ -583,6 +583,12 @@
 						<div class="item">
 							<img src="./image/certificate.png" alt="">
 						</div>
+						<div class="item">
+							<img src="./image/certificate.png" alt="">
+						</div>
+						<div class="item">
+							<img src="./image/certificate.png" alt="">
+						</div>
 					</div>
 				</div>
 			</div>
