--- a/contact.html
+++ b/contact.html
@@ -113,13 +113,13 @@
                     <!--  -->
                     <div class="form_flex">
                         <div class="form-group">
-                            <label for="Email*">Business name </label>
-                            <input type="email" class="form-control" placeholder="Enter Your Business name">
+                            <label for="Email*">Business Name </label>
+                            <input type="email" class="form-control" placeholder="Enter Your Business Name">
                         </div>
                         <!--  -->
                         <div class="form-group">
-                            <label for="Phone Number">Business address</label>
-                            <input type="tel" class="form-control" placeholder="Enter Your Business address">
+                            <label for="Phone Number">Business Address</label>
+                            <input type="tel" class="form-control" placeholder="Enter Your Business Address">
                         </div>
                     </div>
                     <!--  -->
